# SN-Rating-Model

./: .gitignore  1 Methodology overview.md  Hardstop_Rating_Workflow.md  Quantitative_Factors_and_Ratio_Definitions.md  README.md  Rating–Outlook Workflow.md  pyproject.toml  sn_rating.ipynb  windows_bundle  windows_bundle.md
docs/: 1_User_Manual.md  2_Running_The_Model.md  3_Methodology_Overview.md  5_Rating_Outlook_Workflow.md  6_Hardstop_Rating_Workflow.md  7_Sovereign_Cap_Workflow.md  Methodology overview.md  Rating–Outlook Workflow.md  Running the model.md  user_manual.md
notebooks/: sn_rating.ipynb
src/: run_sn_rating.py
src/input/: sn_rating_config.xlsx  sn_rating_input.xlsx
src/sn_rating/: __init__.py  __main__.py  config.py  datamodel.py  excel_io.py  helpers.py  model.py  report.py  run_from_excel.py
src/sn_rating_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
windows_bundle/: Windows bundle download.md  run_sn_rating.bat
windows_bundle/input/: debug_ratios.ipynb  debug_report_block.py  main.py  requirements.txt  sn_rating_config.xlsx  sn_rating_input.xlsx
